[gd_scene load_steps=22 format=2]

[ext_resource path="res://Arena.gd" type="Script" id=1]
[ext_resource path="res://image/bg.png" type="Texture" id=2]
[ext_resource path="res://Reimu.tscn" type="PackedScene" id=3]
[ext_resource path="res://image/gui_popBar.png" type="Texture" id=4]
[ext_resource path="res://PopBar.gd" type="Script" id=5]
[ext_resource path="res://font/VT323-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://image/gui_neutral.png" type="Texture" id=7]
[ext_resource path="res://image/gui_negative.png" type="Texture" id=8]
[ext_resource path="res://image/gui_positive.png" type="Texture" id=9]
[ext_resource path="res://Timer.gd" type="Script" id=10]
[ext_resource path="res://LifeBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://audio/lose.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/up.wav" type="AudioStream" id=13]
[ext_resource path="res://audio/die.wav" type="AudioStream" id=14]
[ext_resource path="res://audio/explode.wav" type="AudioStream" id=15]
[ext_resource path="res://audio/shoot.wav" type="AudioStream" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 448.053, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 400, 20 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "neutral",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "negative",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "positive",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 6 )

[node name="Arena" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 400.293, 301.092 )
z_index = -5
texture = ExtResource( 2 )

[node name="Reimu" parent="." instance=ExtResource( 3 )]
position = Vector2( 400, 550 )
collision_mask = 110

[node name="Wall" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 399.983, 640 )
collision_layer = 2
collision_mask = 93

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
shape = SubResource( 1 )

[node name="Wall2" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( -40, 320 )
rotation = 1.5708
collision_layer = 2
collision_mask = 93

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
shape = SubResource( 1 )

[node name="Wall3" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 840, 320 )
rotation = 1.5708
collision_layer = 2
collision_mask = 93

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall3"]
shape = SubResource( 1 )

[node name="Wall4" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 400, -40 )
collision_layer = 2
collision_mask = 93

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall4"]
shape = SubResource( 1 )

[node name="Barrier" type="StaticBody2D" parent="."]
position = Vector2( 400, 220 )
collision_layer = 128
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier"]
shape = SubResource( 2 )

[node name="CenterAnchor" type="Node2D" parent="."]
position = Vector2( 399.659, 172 )

[node name="SpawnAnchor" type="Node2D" parent="."]
position = Vector2( 20, 260 )

[node name="SpawnAnchor2" type="Node2D" parent="."]
position = Vector2( 780, 580 )

[node name="PopBar" type="Sprite" parent="."]
position = Vector2( 400, 50 )
scale = Vector2( 1, 0.6 )
z_index = 2000
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="0" type="Label" parent="PopBar"]
margin_left = -20.0
margin_top = -70.0
margin_right = 20.0
margin_bottom = -27.0
rect_pivot_offset = Vector2( 20, 15 )
custom_fonts/font = SubResource( 3 )
text = "Â±0"
align = 1
valign = 1

[node name="-1" type="Label" parent="PopBar"]
margin_left = -140.0
margin_top = -70.0
margin_right = -100.0
margin_bottom = -27.0
rect_pivot_offset = Vector2( 20, 15 )
custom_fonts/font = SubResource( 3 )
text = "-1"
align = 1
valign = 1

[node name="-2" type="Label" parent="PopBar"]
margin_left = -260.0
margin_top = -70.0
margin_right = -220.0
margin_bottom = -27.0
rect_pivot_offset = Vector2( 20, 15 )
custom_fonts/font = SubResource( 3 )
text = "-2"
align = 1
valign = 1

[node name="1" type="Label" parent="PopBar"]
margin_left = 100.0
margin_top = -70.0
margin_right = 140.0
margin_bottom = -27.0
rect_pivot_offset = Vector2( 20, 15 )
custom_fonts/font = SubResource( 3 )
text = "+1"
align = 1
valign = 1

[node name="2" type="Label" parent="PopBar"]
margin_left = 220.0
margin_top = -70.0
margin_right = 260.0
margin_bottom = -27.0
rect_pivot_offset = Vector2( 20, 15 )
custom_fonts/font = SubResource( 3 )
text = "+2"
align = 1
valign = 1

[node name="Marker" type="AnimatedSprite" parent="PopBar"]
scale = Vector2( 1.25, 2 )
frames = SubResource( 4 )
animation = "neutral"

[node name="Timer" type="Label" parent="."]
margin_left = 689.211
margin_top = 67.0
margin_right = 798.211
margin_bottom = 132.0
custom_fonts/font = SubResource( 5 )
text = "30.0"
script = ExtResource( 10 )

[node name="LifeBar" parent="." instance=ExtResource( 11 )]
margin_left = 8.42105
margin_top = 64.2105
margin_right = 8.42105
margin_bottom = 64.2105
rect_scale = Vector2( 1.5, 1.5 )

[node name="Audio_LoseLife" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 400, 320 )
stream = ExtResource( 12 )
volume_db = -13.0

[node name="Audio_Up" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 400, 320 )
stream = ExtResource( 13 )
volume_db = -17.0

[node name="Audio_Down" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 400, 320 )
stream = ExtResource( 14 )
volume_db = -15.0

[node name="Audio_Explode" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 400, 320 )
stream = ExtResource( 15 )
volume_db = -15.0

[node name="Audio_Shoot" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 400, 320 )
stream = ExtResource( 16 )
volume_db = -20.0
